name:                coinStream
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/nsluss/coinstream/Reflex#readme
license:             BSD3
license-file:        LICENSE
author:              Noah Sluss
maintainer:          slussnoah@gmail.com
copyright:           2016 Noah Sluss
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , file-embed
                     , aeson
                     , text
                     , reflex
                     , reflex-dom
                     , safe
                     , containers
                     , transformers
                     , bytestring
                     , data-default
  default-language:    Haskell2010

executable coinStream-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , coinStream
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nsluss/coinstream/Reflex